# AGH_ECS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  VisualiseBenchmark.py  \  benchmark.txt
Demo/: App.cpp  App.hpp  Benchmark.hpp  CMakeLists.txt  CmakeLists.txt  Components.hpp  Object.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Renderable.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp  main.cpp
Demo/Systems/: Gravity.hpp  Motion.hpp  SpriteColorizer.hpp
Dependency/: CMakeLists.txt
ECS/: CMakeLists.txt  Component.hpp  ComponentManager.hpp  ECS.cpp  ECS.hpp  Entity.hpp  System.hpp  Types.hpp
Tests/: CMakeLists.txt  test.cpp
